--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="bodyContainer">
 
         <div class="mainCharacterView left" >
                 <div class="nameBox">USS Schwarzenegger</div>
-                <div class="playerImage"></div>
+                <div class="playerImage">
+                </div>
                 <div class="playerStats">
 
                 Hull : 15 <br>
@@ -28,11 +29,13 @@ z
 
         </div>
 
+        <div class="play">Play</div>
 
         <div class="mainCharacterView right">
            
             <div class="nameBox">Enemy</div>
-            <div class="enemyImage"></div>
+            <div class="enemyImage">
+            </div>
                 <div class="enemyStats">
                     Hull : 6 <br>
                     FirePower : 3 <br>
